--- a/Backend/Bluvolt/pom.xml
+++ b/Backend/Bluvolt/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>Bluvolt</groupId>
-	<artifactId>bluvolt</artifactId>
+	<artifactId>Bluvolt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bluvolt</name>
-	<description>Demo project for Spring Boot</description>
+	<description></description>
 	<url/>
 	<licenses>
 		<license/>
